# autotest

test4-1.0.0/: Makefile.am  Makefile.in  configure  configure.ac
test4-1.0.0/src/libtest/: libtest.c
test4-1.0.0/src/test/: test.c
test5-1.0.0/: Makefile.in  configure  configure.ac
